==> raymoss/ProjectFalcon/RF24-master/RF24.cpp <==
#include "nRF24L01.h"
#include "RF24.h"

void RF24::csn(bool mode)
{


//#elif defined(ARDUINO) && !defined (RF24_SPI_TRANSACTIONS)
	// Minimum ideal SPI bus speed is 2x data rate
	// If we assume 2Mbs data rate and 16Mhz clock, a
	// divider of 4 is the minimum we want.
	// CLK:BUS 8Mhz:2Mhz, 16Mhz:4Mhz, or 20Mhz:5Mhz
	
      /*  #if !defined (SOFTSPI)	
		_SPI.setBitOrder(MSBFIRST);
		_SPI.setDataMode(SPI_MODE0);
		_SPI.setClockDivider(SPI_CLOCK_DIV2);
      #endif */ 
	//does not make sense to me 
	//SPI_LowLevel_Init();
	if(mode==HIGH)
		GPIO_SetBits(GPIOPort,CSN_PIN);
	else
		GPIO_ResetBits(GPIOPort,CSN_PIN);
	}

void RF24::ce(bool level)
{
  //Allow for 3-pin use on ATTiny
  //if (ce_pin != csn_pin){
	//digitalWrite(ce_pin,level);
	if(level==HIGH)
          GPIO_SetBits(GPIOPort, CE_PIN);
	else
          GPIO_ResetBits(GPIOPort, CE_PIN);
  }

uint8_t RF24::write_payload(const void* buf, uint8_t data_len, const uint8_t writeType)
{
  uint8_t status;
  const uint8_t* current = reinterpret_cast<const uint8_t*>(buf);

   data_len = rf24_min(data_len, payload_size);
   uint8_t blank_len = dynamic_payloads_enabled ? 0 : payload_size - data_len;
  //printf("[Writing %u bytes %u blanks]",data_len,blank_len);
  //IF_SERIAL_DEBUG( printf("[Writing %u bytes %u blanks]\n",data_len,blank_len); );
  
 /* #if defined (RF24_LINUX)
	beginTransaction();
	uint8_t * prx = spi_rxbuff;
	uint8_t * ptx = spi_txbuff;
    uint8_t size;
	size = data_len + blank_len + 1 ; // Add register value to transmit buffer

	*ptx++ =  writeType;
    while ( data_len-- )
      *ptx++ =  *current++;
    while ( blank_len-- )
	  *ptx++ =  0;
	
	_SPI.transfernb( (char *) spi_txbuff, (char *) spi_rxbuff, size);
	status = *prx; // status is 1st byte of receive buffer
	endTransaction();

  #else */
//MOSS: debug prints
//  usart_printfm(USARTx,(const int *)"data len=%x",data_len);
//  uint8_t i=0,copy=data_len;  
//  while(copy!=0){
//usart_printfm(USARTx,(const int *)"The payload value:%x\n\r",*(current+i));
// i++;
// copy--;
// }
  beginTransaction();
  /* status = _SPI.transfer( writeType );
  while ( data_len-- ) {
    _SPI.transfer(*current++);
  } */
  status=SPI_Write(current,writeType,data_len);
  while ( blank_len-- ) {
    SPI_SendByte(0x0);
  }  
  endTransaction();

  //#endif
  //MOSS:debug
 //usart_printfm(USARTx,(const int *)"The status before writing:%d\n\r",status);
  return status;
}

uint8_t RF24::read_payload(void* buf, uint8_t data_len)
{
  uint8_t status;
  uint8_t* current = reinterpret_cast<uint8_t*>(buf);

  if(data_len > payload_size) data_len = payload_size;
  uint8_t blank_len = dynamic_payloads_enabled ? 0 : payload_size - data_len;
  
  //printf("[Reading %u bytes %u blanks]",data_len,blank_len);

  //IF_SERIAL_DEBUG( printf("[Reading %u bytes %u blanks]\n",data_len,blank_len); );
  
  /* #if defined (RF24_LINUX)
	beginTransaction();
	uint8_t * prx = spi_rxbuff;
	uint8_t * ptx = spi_txbuff;
    uint8_t size;
    size = data_len + blank_len + 1; // Add register value to transmit buffer

	*ptx++ =  R_RX_PAYLOAD;
	while(--size) 
		*ptx++ = NOP;
		
	size = data_len + blank_len + 1; // Size has been lost during while, re affect
	
	_SPI.transfernb( (char *) spi_txbuff, (char *) spi_rxbuff, size);
	
	status = *prx++; // 1st byte is status	
    
    if (data_len > 0) {
      while ( --data_len ) // Decrement before to skip 1st status byte
          *current++ = *prx++;
		
      *current = *prx;
    }
	endTransaction();
  #else */

  beginTransaction();
  /* status = _SPI.transfer( R_RX_PAYLOAD );
  while ( data_len-- ) {
    *current++ = _SPI.transfer(0xFF);
  } */
  status=SPI_Read(current,R_RX_PAYLOAD,data_len);
  while ( blank_len-- ) {
    SPI_SendByte(0xff);
  }
  endTransaction();

  //#endif

 return status;
}

bool RF24::begin(void)
{

  uint8_t setup=0;
  SPI_LowLevel_Init();
   ce(LOW);
   csn(HIGH);
  	

  // Must allow the radio time to settle else configuration bits will not necessarily stick.
  // This is actually only required following power up but some settling time also appears to
  // be required after resets too. For full coverage, we'll always assume the worst.
  // Enabling 16b CRC is by far the most obvious case if the wrong timing is used - or skipped.
  // Technically we require 4.5ms + 14us as a worst case. We'll just call it 5ms for good measure.
  // WARNING: Delay is based on P-variant whereby non-P *may* require different timing.
  ms_delay( 5 ) ;                                                                                //change timming to 100 ms from 5ms

  // Reset NRF_CONFIG and enable 16-bit CRC.
  
  write_register( NRF_CONFIG, 0x0C ) ;
  
  //MYASSERT(a,"Failed to srtie to NRF_Config\n\r")
  // Set 1500uS (minimum for 32B payload in ESB@250KBPS) timeouts, to make testing a little easier
  // WARNING: If this is ever lowered, either 250KBS mode with AA is broken or maximum packet
  // sizes must never be used. See documentation for a more complete explanation.
  setRetries(5,15);
  //MYASSERT(a,"Failed to setRetries\n\r")
  // Reset value is MAX
  //setPALevel( RF24_PA_MAX ) ;

  // check for connected module and if this is a p nRF24l01 variant
  
  if( setDataRate( RF24_250KBPS ) )
  {
    p_variant = true ;
  }
  setup = read_register(RF_SETUP);
  /*if( setup == 0b00001110 )     // register default for nRF24L01P
  {
    p_variant = true ;
  }*/
  
  // Then set the data rate to the slowest (and most reliable) speed supported by all
  // hardware.
  setDataRate( RF24_1MBPS ) ;

  // Initialize CRC and request 2-byte (16bit) CRC
  //setCRCLength( RF24_CRC_16 ) ;

  // Disable dynamic payloads, to match dynamic_payloads_enabled setting - Reset value is 0
  toggle_features();
  write_register(FEATURE,0 );
  write_register(DYNPD,0);

  // Reset current status
  // Notice reset and flush is the last thing we do
  write_register(NRF_STATUS,_BV(RX_DR) | _BV(TX_DS) | _BV(MAX_RT) );

  // Set up default configuration.  Callers can always change it later.
  // This channel should be universally safe and not bleed over into adjacent
  // spectrum.
  setChannel(76);

  // Flush buffers
  flush_rx();
  flush_tx();

  powerUp(); //Power up by default when begin() is called

  // Enable PTX, do not write CE high so radio will remain in standby I mode ( 130us max to transition to RX or TX instead of 1500us from powerUp )
  // PTX should use only 22uA of power
  write_register(NRF_CONFIG, ( read_register(NRF_CONFIG) ) & ~_BV(PRIM_RX) );

  // if setup is 0 or ff then there was no response from module
  return ( setup != 0 && setup != 0xff );
}

void RF24::stopListening(void)
{  
  int txRxDelay=85;
  ce(LOW);

  //micro_delay(150);                                                             changing micro_delay to ms(1);
  micro_delay(txRxDelay);
  if(read_register(FEATURE) & _BV(EN_ACK_PAY)){
        micro_delay(txRxDelay); //200                                                         changing micro_delay to ms 1
	flush_tx();
  }
  //flush_rx();
  write_register(NRF_CONFIG, ( read_register(NRF_CONFIG) ) & ~_BV(PRIM_RX) );
 
  #if defined (RF24_TINY) || defined (LITTLEWIRE)
  // for 3 pins solution TX mode is only left with additonal powerDown/powerUp cycle
  if (ce_pin == csn_pin) {
    powerDown();
	powerUp();
  }
  #endif
  write_register(EN_RXADDR,read_register(EN_RXADDR) | _BV(pgm_read_byte(&child_pipe_enable[0]))); // Enable RX on pipe0
  //MOSS:debug
  //usart_printfm(USARTx,(const int *)"read_register(EN_RXADDR)=%x\n\r",read_register(EN_RXADDR));
  //usart_printfm(USARTx,(const int *)"read_register(EN_RXADDR) | _BV(pgm_read_byte(&child_pipe_enable[0])):%x\r\n",read_register(EN_RXADDR) | _BV(pgm_read_byte(&child_pipe_enable[0])));
  //delayMicroseconds(100);

}

uint8_t RF24::getDynamicPayloadSize(void)
{
  uint8_t result = 0;

 
  beginTransaction();
  SPI_SendByte( R_RX_PL_WID );
  result = SPI_SendByte(0xff);
  endTransaction();
  

  if(result > 32) { flush_rx(); ms_delay(5); return 0; }
  return result;
}
